--- a/oscillator_catalog/functions_test.ipynb
+++ b/oscillator_catalog/functions_test.ipynb
@@ -316,17 +316,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab8a3f9b-7b00-4037-a2ab-17d14bca5db0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arrays = check_coherence_test(t_fit520, flux_fit520, weight_fit520, final_freqs520, exptime520)\n",
-    "#print(arrays)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ad93e40f-4880-4bd2-8665-78242e58e76a",
    "metadata": {},
    "outputs": [],
@@ -391,7 +380,7 @@
     "fig, axes = plt.subplots(3, 4, figsize=(16, 9))\n",
     "\n",
     "for idx, (ax, points1, points2, points3, points4) in enumerate(zip(axes.flat, all, half, quartiles, eighths)):\n",
-    "    a_all = points1[0]  h\n",
+    "    a_all = points1[0]  \n",
     "    b_all = points1[1]  \n",
     "\n",
     "    a_half = points2[:, 0]  \n",
@@ -450,7 +439,7 @@
     "    for split, result in zip(splits, results):     \n",
     "\n",
     "        jack = (split == 8)\n",
-    "        masks = splitting(ts, split, jackknives = jack)\n",
+    "        masks = splitting(ts, split, jackknife = jack)\n",
     "        for idx, om in enumerate(oms):\n",
     "            for i, mask in enumerate(masks):\n",
     "                A = nana.integral_design_matrix(ts[mask], om, T)\n",
@@ -465,10 +454,257 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cbd95313-66b1-4c3c-b8d1-eaa24d71b158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## rewriting code for rate of change of phase, rate of change of log A\n",
+    "\n",
+    "half\n",
+    "\n",
+    "a_halves = half[0][:, 0]\n",
+    "b_halves = half[0][:, 1]\n",
+    "\n",
+    "\n",
+    "delta_r = [a_latte - a_earl_grey, b_latte - b_earl_grey]\n",
+    "        vector_r = [0.5 * (a_latte + a_earl_grey), 0.5 * (b_latte + b_earl_grey)]\n",
+    "\n",
+    "        cross_z = delta_r[0] * vector_r[1] - delta_r[1] * vector_r[0]\n",
+    "        dot_r = np.dot(vector_r, vector_r)\n",
+    "\n",
+    "        if dot_r == 0:\n",
+    "            raise ZeroDivisionError(f\"change_in_phase_and_amp(): phase vector has zero magnitude at index {i}\")\n",
+    "\n",
+    "        rates_of_phases[i] = (1 / delta_t) * (cross_z / dot_r)\n",
+    "        rates_of_amps[i]   = (1 / delta_t) * (np.dot(delta_r, vector_r) / dot_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f23dd3-beca-4ca4-b6da-2356ff4c143b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for ab_pair in half:\n",
+    "    \n",
+    "a_halves = half[0][:, 0]\n",
+    "b_halves = half[0][:, 1]\n",
+    "print(a_halves, b_halves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ed933abc-0ab6-4b0d-8892-b2f983e82692",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##We did the two split now this is a function for the four split\n",
+    "\n",
+    "#Get a,b values for a four split\n",
+    "#compute the deltak which is the separation with the \"full\" a,b values with the individual 4\n",
+    "#Compute x hat and y hat\n",
+    "#Then we are given two formulas to approximate values\n",
+    "#compute the 1/2 rms\n",
+    "\n",
+    "a_all = all[0][0] # a for first freq\n",
+    "b_all = all[0][1] # b for first freq\n",
+    "\n",
+    "a_quarters = quartiles[0][:, 0]\n",
+    "b_quarters = quartiles[0][:, 1]\n",
+    "\n",
+    "deltak = np.zeros((4,2))\n",
+    "\n",
+    "for i, (a,b) in enumerate(zip(a_quarters, b_quarters)):   \n",
+    "    deltak[i] = [a - a_all, b - b_all]\n",
+    "\n",
+    "x_not = [a_all, b_all]\n",
+    "x_not_norm = np.linalg.norm(x_not)\n",
+    "x_hat = x_not / x_not_norm\n",
+    "y_hat = [x_hat[1], - x_hat[0]]\n",
+    "\n",
+    "amp_change = np.dot(deltak, x_hat)/ x_not_norm\n",
+    "phase_change = np.dot(deltak, y_hat)/x_not_norm\n",
+    "\n",
+    "print(f\"this is amp change{amp_change} and this is phase change{phase_change}\")\n",
+    "sigma_lnA = 0.5 * np.sqrt((amp_change ** 2))#1/2 rms lnA\n",
+    "sigma_phi = 0.5 * np.sqrt((phase_change ** 2)) #1/2 rms phase\n",
+    "\n",
+    "print(sigma_lnA, sigma_phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049452b8-a17e-42af-b93e-f29704b024a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###jackknife sampling to dimensionless\n",
+    "\n",
+    "\n",
+    "a_jacks = eighths[0][:, 0]\n",
+    "b_jacks = eighths[0][:, 1]\n",
+    "\n",
+    "deltak = np.zeros((8,2))\n",
+    "\n",
+    "for i, (a,b) in enumerate(zip(a_jacks, b_jacks)):   \n",
+    "    deltak[i] = [a - a_all, b - b_all]\n",
+    "\n",
+    "phase_change = np.dot(deltak, y_hat)/x_not_norm\n",
+    "\n",
+    "rms_jack = np.sqrt((7/8) * np.sum(phase_change ** 2)) #sigma phi \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0077d3ab-5be9-4631-934f-c4252d0679c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## inputs are the quarters, half, jacks, all results\n",
+    "\n",
+    "#compute two values for the a,b half\n",
+    "\n",
+    "#compute the amp change and the phase change values (4)\n",
+    "\n",
+    "#compute the varicnes for lnA, and phi (4)\n",
+    "\n",
+    "#comput eth ephase change and its varience(jack)\n",
+    "\n",
+    "#return 2 + 2 + 2+ 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5cfb4bc-6b74-4e6d-a370-b90906cd4706",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "def sampling_stats(alls, quartiles, eighths):\n",
+    "\n",
+    "    f_num = len(alls)\n",
+    "    \n",
+    "    amp_change = np.zeros((f_num, 4))\n",
+    "    phase_change = np.zeros((f_num, 4))\n",
+    "\n",
+    "    sigma_lnA = np.zeros(f_num)\n",
+    "    sigma_phi4 = np.zeros(f_num)\n",
+    "    sigma_phij = np.zeros(f_num)\n",
+    "    \n",
+    "    for inx, (all, quartile, eighth) in enumerate(zip(alls, quartiles, eighths)):\n",
+    "\n",
+    "        deltak_4 = np.zeros((4,2))\n",
+    "        deltak_j = np.zeros((8,2))\n",
+    "        a,b = all[0], all[1]\n",
+    "    \n",
+    "        for i, q in enumerate(quartile):   \n",
+    "            deltak_4[i] = [a - q[0], b - q[1]]\n",
+    "\n",
+    "        for i, j in enumerate(eighth):   \n",
+    "            deltak_j[i] = [a - j[0], b - j[1]]\n",
+    "                \n",
+    "        x = np.array([a,b])\n",
+    "        x_norm = np.linalg.norm([a, b])\n",
+    "        x_hat = x / x_norm\n",
+    "        y_hat = [x_hat[1], - x_hat[0]]\n",
+    "\n",
+    "        amp = np.dot(deltak_4, x_hat)/ x_norm\n",
+    "        phase4 = np.dot(deltak_4, y_hat)/x_norm\n",
+    "        phasej = np.dot(deltak_j, y_hat)/x_norm\n",
+    "\n",
+    "        var_lnA = 0.5 * np.sqrt(np.mean(amp ** 2))#1/2 rms lnA\n",
+    "        varphi4 = 0.5 * np.sqrt(np.mean(phase4 ** 2)) #1/2 rms phase\n",
+    "\n",
+    "        varphij = np.sqrt((7/8) * np.sum(phasej ** 2)) #sigma phi\n",
+    "\n",
+    "        amp_change[inx] = amp\n",
+    "        phase_change[inx] = phase4\n",
+    "\n",
+    "        sigma_lnA[inx] = var_lnA\n",
+    "        sigma_phi4[inx] = varphi4\n",
+    "        sigma_phij[inx] = varphij \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    return amp_change, phase_change, sigma_lnA, sigma_phi4, sigma_phij"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4703630-c814-4e99-9041-de41a3d152e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amp_change, phase_change, sigma_lnA, sigma_phi4, sigma_phij = sampling_stats(all, quartiles, eighths)\n",
+    "print(f\"this is the change in ln(amp){amp_change}\")\n",
+    "print(f\"this is the change in phase{phase_change}\")\n",
+    "print(\"sigma lnA:\", sigma_lnA)\n",
+    "print(\"sigma phi for quarter:\", sigma_phi4)\n",
+    "print(\"sigma phi for jackknife:\", sigma_phij)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f461400-e6d8-4551-a8f0-8714db9f7fce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_all = all[i][0] # a for first freq\n",
+    "        b_all = all[i][1]\n",
+    "\n",
+    "        a_quarters = quartiles[0][:, 0]\n",
+    "        b_quarters = quartiles[0][:, 1]\n",
+    "\n",
+    "        a_jacks = eighths[0][:, 0]\n",
+    "        b_jacks = eighths[0][:, 1]\n",
+    "\n",
+    "        deltak_4 = np.zeros((4,2))\n",
+    "        deltak_j = np.zeros((8,2))\n",
+    "    \n",
+    "        for i, (a,b) in enumerate(zip(a_quarters, b_quarters)):   \n",
+    "            deltak_4[i] = [a - a_all, b - b_all]\n",
+    "\n",
+    "        for i, (a,b) in enumerate(zip(a_jacks, a_jacks)):   \n",
+    "            deltak_j[i] = [a - a_all, b - b_all]\n",
+    "\n",
+    "        x_not = [a_all, b_all]\n",
+    "        x_not_norm = np.linalg.norm(x_not)\n",
+    "        x_hat = x_not / x_not_norm\n",
+    "        y_hat = [x_hat[1], - x_hat[0]]\n",
+    "\n",
+    "        amp_change = np.dot(deltak_4, x_hat)/ x_not_norm\n",
+    "        phase_change_4 = np.dot(deltak_4, y_hat)/x_not_norm\n",
+    "        phase_change_j = np.dot(deltak_j, y_hat)/x_not_norm\n",
+    "\n",
+    "        sigma_lnA = 0.5 * np.sqrt((phase_change_4 ** 2))#1/2 rms lnA\n",
+    "        sigma_phi_4 = 0.5 * np.sqrt((phase_change_4 ** 2)) #1/2 rms phase\n",
+    "\n",
+    "        sigma_phi_j = np.sqrt((7/8) * np.sum(phase_change ** 2)) #sigma phi \n",
+    "\n",
+    "\n",
+    "#another function?:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa39b52b-1934-44cb-ab28-1136a9c1a946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.table import Table\n",
+    "from astropy.io import ascii"
+   ]
   }
  ],
  "metadata": {
