--- a/oscillator_catalog/functions_test.ipynb
+++ b/oscillator_catalog/functions_test.ipynb
@@ -454,140 +454,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbd95313-66b1-4c3c-b8d1-eaa24d71b158",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## rewriting code for rate of change of phase, rate of change of log A\n",
-    "\n",
-    "half\n",
-    "\n",
-    "a_halves = half[0][:, 0]\n",
-    "b_halves = half[0][:, 1]\n",
-    "\n",
-    "\n",
-    "delta_r = [a_latte - a_earl_grey, b_latte - b_earl_grey]\n",
-    "        vector_r = [0.5 * (a_latte + a_earl_grey), 0.5 * (b_latte + b_earl_grey)]\n",
-    "\n",
-    "        cross_z = delta_r[0] * vector_r[1] - delta_r[1] * vector_r[0]\n",
-    "        dot_r = np.dot(vector_r, vector_r)\n",
-    "\n",
-    "        if dot_r == 0:\n",
-    "            raise ZeroDivisionError(f\"change_in_phase_and_amp(): phase vector has zero magnitude at index {i}\")\n",
-    "\n",
-    "        rates_of_phases[i] = (1 / delta_t) * (cross_z / dot_r)\n",
-    "        rates_of_amps[i]   = (1 / delta_t) * (np.dot(delta_r, vector_r) / dot_r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19f23dd3-beca-4ca4-b6da-2356ff4c143b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for ab_pair in half:\n",
-    "    \n",
-    "a_halves = half[0][:, 0]\n",
-    "b_halves = half[0][:, 1]\n",
-    "print(a_halves, b_halves)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed933abc-0ab6-4b0d-8892-b2f983e82692",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##We did the two split now this is a function for the four split\n",
-    "\n",
-    "#Get a,b values for a four split\n",
-    "#compute the deltak which is the separation with the \"full\" a,b values with the individual 4\n",
-    "#Compute x hat and y hat\n",
-    "#Then we are given two formulas to approximate values\n",
-    "#compute the 1/2 rms\n",
-    "\n",
-    "a_all = all[0][0] # a for first freq\n",
-    "b_all = all[0][1] # b for first freq\n",
-    "\n",
-    "a_quarters = quartiles[0][:, 0]\n",
-    "b_quarters = quartiles[0][:, 1]\n",
-    "\n",
-    "deltak = np.zeros((4,2))\n",
-    "\n",
-    "for i, (a,b) in enumerate(zip(a_quarters, b_quarters)):   \n",
-    "    deltak[i] = [a - a_all, b - b_all]\n",
-    "\n",
-    "x_not = [a_all, b_all]\n",
-    "x_not_norm = np.linalg.norm(x_not)\n",
-    "x_hat = x_not / x_not_norm\n",
-    "y_hat = [x_hat[1], - x_hat[0]]\n",
-    "\n",
-    "amp_change = np.dot(deltak, x_hat)/ x_not_norm\n",
-    "phase_change = np.dot(deltak, y_hat)/x_not_norm\n",
-    "\n",
-    "print(f\"this is amp change{amp_change} and this is phase change{phase_change}\")\n",
-    "sigma_lnA = 0.5 * np.sqrt((amp_change ** 2))#1/2 rms lnA\n",
-    "sigma_phi = 0.5 * np.sqrt((phase_change ** 2)) #1/2 rms phase\n",
-    "\n",
-    "print(sigma_lnA, sigma_phi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "049452b8-a17e-42af-b93e-f29704b024a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###jackknife sampling to dimensionless\n",
-    "\n",
-    "\n",
-    "a_jacks = eighths[0][:, 0]\n",
-    "b_jacks = eighths[0][:, 1]\n",
-    "\n",
-    "deltak = np.zeros((8,2))\n",
-    "\n",
-    "for i, (a,b) in enumerate(zip(a_jacks, b_jacks)):   \n",
-    "    deltak[i] = [a - a_all, b - b_all]\n",
-    "\n",
-    "phase_change = np.dot(deltak, y_hat)/x_not_norm\n",
-    "\n",
-    "rms_jack = np.sqrt((7/8) * np.sum(phase_change ** 2)) #sigma phi \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0077d3ab-5be9-4631-934f-c4252d0679c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## inputs are the quarters, half, jacks, all results\n",
-    "\n",
-    "#compute two values for the a,b half\n",
-    "\n",
-    "#compute the amp change and the phase change values (4)\n",
-    "\n",
-    "#compute the varicnes for lnA, and phi (4)\n",
-    "\n",
-    "#comput eth ephase change and its varience(jack)\n",
-    "\n",
-    "#return 2 + 2 + 2+ 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a5cfb4bc-6b74-4e6d-a370-b90906cd4706",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "\n",
     "def sampling_stats(alls, quartiles, eighths):\n",
     "\n",
     "    f_num = len(alls)\n",
@@ -655,6 +525,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cdb16609-89e4-43e0-b62b-0dfec515a922",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"rate of change of phase\", rate_of_phase)\n",
+    "print(\"rate of chnage of log amp\", rate_of_amp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9f461400-e6d8-4551-a8f0-8714db9f7fce",
    "metadata": {},
    "outputs": [],
@@ -702,9 +583,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.table import Table\n",
-    "from astropy.io import ascii"
+    "# data = Table()\n",
+    "\n",
+    "# data['modes'] = final_freqs520\n",
+    "# data['phase change (early/late)'] = rate_of_phase\n",
+    "# data['ln(amp) change (early/late)'] = rate_of_amp\n",
+    "# #data['phase change (each quarter)'] = phase_change\n",
+    "# #data['ln(amp) change (each quarter)'] = amp_change\n",
+    "# data['sigma ln(amp) (quarter)'] = sigma_lnA\n",
+    "# data['sigma phi (quarter)'] = sigma_phi4\n",
+    "# data['sigma phi (jackknife)'] = sigma_phij\n",
+    "\n",
+    "# ascii.write(\n",
+    "#     data,\n",
+    "#     'kic520290.csv',  \n",
+    "#     overwrite=True,\n",
+    "#     format=\"csv\",\n",
+    "#     formats={\n",
+    "#         \"modes\": \"{:.10f}\",\n",
+    "#         \"phase change (early/late)\": \"{:.7e}\",\n",
+    "#         \"ln(amp) change (early/late)\": \"{:.7e}\",\n",
+    "#         #\"phase change (each quarter)\": \"{:.7e}\",\n",
+    "#         #\"ln(amp) change (each quarter)\": \"{:.7e}\",\n",
+    "#         \"sigma ln(amp) (quarter)\": \"{:.7e}\",\n",
+    "#         \"sigma phi (quarter)\": \"{:.7e}\",\n",
+    "#         \"sigma phi (jackknife)\": \"{:.7e}\"\n",
+    "#     }\n",
+    "# )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53322558-bb46-4b19-8170-1c0d5393c625",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
