--- a/oscillator_catalog/star_stats_testing.ipynb
+++ b/oscillator_catalog/star_stats_testing.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "id": "daa9e2b2-21be-43c9-a1dd-7114467dc75d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nana/venv/lib/python3.13/site-packages/lightkurve/prf/__init__.py:7: UserWarning: Warning: the tpfmodel submodule is not available without oktopus installed, which requires a current version of autograd. See #1452 for details.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import star_functions as nana\n",
     "import pandas as pd\n",
@@ -1007,8 +1016,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cc3eb216-da2c-493b-b11a-8175d902d31f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8264159"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8264159"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "19d807f5-ad60-4965-93e6-f7603e2ab71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "regions:['B' 'A' 'A' 'B' 'B' 'A' 'A' 'A' 'B' 'B' 'B' 'A'] final freqs:[np.float64(48.471289220356454) np.float64(0.6562701384013533)\n",
+      " np.float64(1.1677860185882112) np.float64(48.54827353702732)\n",
+      " np.float64(48.54827414814468) np.float64(0.888745418805805)\n",
+      " np.float64(1.5621985904121525) np.float64(0.8230913523200911)\n",
+      " np.float64(48.32398275274463) np.float64(48.280691897805106)\n",
+      " np.float64(48.51451584222806) np.float64(4.817759047427796)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ANOTHER POSTER CHILD KIC 7767699\n",
+    "\n",
+    "lc, delta_f, sampling_time, exptime776= nana.star('KIC8264159')\n",
+    "# print(\"delta_f:\", delta_f)\n",
+    "# print(\"sampling_time:\", sampling_time)\n",
+    "#if lc is None:\n",
+    "    #return \n",
+    "f_max = (3 / (2*sampling_time))\n",
+    "f_min = 0.5\n",
+    "df = delta_f/3\n",
+    "\n",
+    "t_fit776, flux_fit776, weight_fit776 = nana.mask_vals(lc)\n",
+    "freq_full, power_full = nana.pg_full(f_min, f_max, df, lc)\n",
+    "freq_mini, power_mini = nana.pg_mini(f_min, f_max, df, lc )\n",
+    "\n",
+    "# plt.plot(freq_mini, power_mini, 'k.')\n",
+    "# plt.show()\n",
+    "# plt.plot(freq_full, power_full, 'k.')\n",
+    "# plt.show()\n",
+    "\n",
+    "indices = nana.get_filtered_peaks(12, freq_mini, power_mini)\n",
+    "\n",
+    "\n",
+    "refined_freq, refined_power, second_derivatives = nana.refine_peaks(freq_mini, power_mini, indices)\n",
+    "# plt.plot(freq_mini, power_mini, 'k.')\n",
+    "# plt.scatter(freq_mini[indices], refined_power, color = 'red', marker = 'o')\n",
+    "# plt.show()\n",
+    "\n",
+    "fc = nana.folding_freq(delta_f, freq_full, power_full, sampling_time, False)\n",
+    "regions, final_freqs776, chi2s = nana.region_and_freq(indices, fc, df, freq_mini, power_mini, t_fit776, flux_fit776, weight_fit776, exptime776)\n",
+    "print(f\"regions:{regions}\", f\"final freqs:{final_freqs776}\")\n",
+    "\n",
+    "# plt.plot(freq_full, power_full, 'k-')\n",
+    "# plt.scatter(final_freqs776, refined_power, color = 'red', marker = 'o')\n",
+    "# plt.show()\n",
+    "\n",
+    "# plt.plot(freq_mini, power_mini, 'g-')\n",
+    "# plt.show()\n",
+    "\n",
+    "a_early, a_late, b_early, b_late = nana.check_coherence(t_fit776, flux_fit776, weight_fit776, final_freqs776, exptime776)\n",
+    "rate_of_phase776, rate_of_amp776 = nana.change_in_phase_and_amp(a_early, a_late, b_early, b_late, t_fit776)\n",
+    "delta_chi2s = nana.null_chi_squared(flux_fit776, weight_fit776) - chi2s\n",
+    "sharpnesses = nana.sharpness(second_derivatives, refined_power)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f4af98d-8e3b-4e50-bf00-ba5a497604f0",
    "metadata": {},
    "outputs": [],
    "source": []
