--- a/oscillator_catalog/delta_chi2_gone.ipynb
+++ b/oscillator_catalog/delta_chi2_gone.ipynb
@@ -64,12 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0609d8ac-6eaf-418e-b1da-83aaa90c60c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m rando_kics = \u001b[43mrandom\u001b[49m.sample(kicz, \u001b[32m13\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'random' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "rando_kics = random.sample(kicz, 5)"
+    "rando_kics = random.sample(kicz, 13)"
    ]
   },
   {
