--- a/oscillator_catalog/running_on_stars.ipynb
+++ b/oscillator_catalog/running_on_stars.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d07eb735-c1b9-4155-b718-b372ad15350b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nana/venv/lib/python3.13/site-packages/lightkurve/prf/__init__.py:7: UserWarning: Warning: the tpfmodel submodule is not available without oktopus installed, which requires a current version of autograd. See #1452 for details.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import star_functions as nana\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "120e8ffb-d9bf-440f-b2bb-6dd8e88fd508",
    "metadata": {},
    "outputs": [],
