--- a/oscillator_catalog/database_interactions.ipynb
+++ b/oscillator_catalog/database_interactions.ipynb
@@ -2,56 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "0cfd3fb6-587a-40b6-ba67-0f507d98b7e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import argparse\n",
     "import mysql.connector\n",
-    "from astropy.table import Table"
+    "from astropy.table import Table\n",
+    "from astropy.time import Time\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "14496482-01fd-4fc4-bace-c22c6351921c",
+   "execution_count": 67,
+   "id": "af4f561f-704e-4dc7-9137-c9bf88316eb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''database setup commands'''\n",
-    "\n",
-    "def get_db_connection():\n",
-    "    return mysql.connector.connect(\n",
-    "        host='localhost',\n",
-    "        user='nana',\n",
-    "        database='stars_db')\n",
-    "\n",
-    "def execute_query_and_close(query):\n",
-    "    conn = get_db_connection()\n",
-    "    conn.cursor().execute(query)\n",
-    "    conn.commit()\n",
-    "    conn.cursor().close()\n",
-    "    conn.close()\n",
+    "def kill_sleeping_processes():\n",
+    "    '''WARNING\n",
+    "    This is dangerous\n",
+    "    Magic number 1800\n",
+    "    Magic user `nana`\n",
+    "    '''\n",
     "    \n",
-    "def load_star_table():\n",
-    "    filename = \"KICids.csv\"\n",
-    "    foo = Table.read(filename, format = \"ascii.csv\")\n",
-    "    kic_ids = [f\"KIC{f:09d}\" for f in foo['ID']]\n",
-    "    query = \"DELETE FROM star; INSERT INTO star (star_id) VALUES ('\" + \"'),('\".join(kic_ids) + \"');\"\n",
-    "    execute_query_and_close(query)\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    query1 = 'SELECT Id FROM INFORMATION_SCHEMA.PROCESSLIST WHERE Command = \"Sleep\" AND User = \"nana\" AND Time > 1800;'\n",
+    "    cursor.execute(query1)\n",
     "\n",
-    "def load_dataset_table():\n",
-    "    query = \"\"\"DELETE FROM dataset; \n",
-    "    INSERT INTO dataset (dataset_id, description) \n",
-    "    VALUES ('Kepler_long', 'Long-cadence data from the NASA Kepler Mission');\"\"\"\n",
-    "    execute_query_and_close(query)\n",
-    "    "
+    "    result = cursor.fetchall()\n",
+    "    sleeping_ids = [row[0] for row in result]\n",
+    "    for sid in sleeping_ids:\n",
+    "        query2 = f\"KILL {sid};\"\n",
+    "        cursor.execute(query2)\n",
+    "        print(f\"Killed sleeping process with ID {sid}\")\n",
+    "    \n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
+   "id": "27f14bd7-8af2-4d64-8680-856361a1d9f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Killed sleeping process with ID 209654\n"
+     ]
+    }
+   ],
+   "source": [
+    "kill_sleeping_processes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "e07b8b2a-7128-4a0d-a09f-ae121d2431bc",
    "metadata": {},
    "outputs": [],
@@ -61,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "9b13e786-c285-44a6-8886-966fecdfad20",
    "metadata": {},
    "outputs": [],
@@ -71,11 +85,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c224de74-4cde-4073-b9c4-0a27fe701f8c",
+   "execution_count": 5,
+   "id": "5c72f200-7422-44d8-8667-db4e84fec526",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "load_task_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5c42558e-e7ea-496d-b2bc-be8f09983cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_one_task():\n",
+    "    #run two queries\n",
+    "    #ask for unstarted task, mark the task as started\n",
+    "   \n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    query1 = \"SELECT star_id, dataset_id FROM task WHERE started IS NULL LIMIT 1;\"\n",
+    "    cursor.execute(query1)\n",
+    "    star_id, dataset_id = cursor.fetchall()[0]\n",
+    "       \n",
+    "    query2 = f\"\"\"UPDATE task SET \n",
+    "    started = \"{Time(Time.now(), format = \"isot\")}\", \n",
+    "    process_id = {os.getpid()} WHERE star_id = \"{star_id}\" AND dataset_id = \"{dataset_id}\";\"\"\"\n",
+    "    cursor.execute(query2)\n",
+    "    conn.commit()\n",
+    "    cursor.close()\n",
+    "    conn.close()\n",
+    "    return star_id, dataset_id\n",
+    "\n",
+    "def end_one_task(star_id, dataset_id):\n",
+    "    query = f\"\"\"UPDATE task SET \n",
+    "    finished = \"{Time(Time.now(), format = \"isot\")}\" \n",
+    "    WHERE star_id = \"{star_id}\" AND dataset_id = \"{dataset_id}\";\"\"\"\n",
+    "    execute_query_and_close(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "91f81f77-f212-48f1-b789-f3d927bf5b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('KIC000757099', 'Kepler_long')\n"
+     ]
+    }
+   ],
+   "source": [
+    "foo = start_one_process()\n",
+    "print(foo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e5db7534-c812-4abc-aa4c-75bbdd2f08f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end_one_task(*foo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c224de74-4cde-4073-b9c4-0a27fe701f8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[31mAssertionError\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "388ef3e4-ccad-4c43-a11f-73d00f2b7d03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kill_ghost_process():\n",
+    "    query = \"SHOW PROCESSLIST\"\n",
+    "    conn = get_db_connection()\n",
+    "    cursor = conn.cursor()\n",
+    "    cursur.execute(query)\n",
+    "\n",
+    "    proc\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
