--- a/oscillator_catalog/database_interactions.ipynb
+++ b/oscillator_catalog/database_interactions.ipynb
@@ -184,14 +184,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def kill_ghost_process():\n",
-    "    query = \"SHOW PROCESSLIST\"\n",
-    "    conn = get_db_connection()\n",
-    "    cursor = conn.cursor()\n",
-    "    cursur.execute(query)\n",
+    "# Create function run_one_task()\n",
+    "# start_one_task()\n",
+    "# Returns star_id, and dataset_id\n",
+    "# Do mode stuff (aka the pipeline stuff)\n",
+    "# If modes found then output mode function\n",
+    "# Output modes function (for one mode or all?)\n",
+    "# Basically add to the the mode db\n",
+    "# End_task\n",
     "\n",
-    "    proc\n",
-    "\n"
+    "def run_one_task():\n",
+    "    star_id, dataset_id = start_one_task()\n",
+    "    output_table = find_modes_in_star(star_id)\n",
+    "\n",
+    "    if output_table is not None:\n",
+    "        output_modes(output_table)\n",
+    "        record_star()\n",
+    "\n",
+    "    end_one_task(star_id, dataset_id)\n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
